--- a/CG_Final_geospacial.ipynb
+++ b/CG_Final_geospacial.ipynb
@@ -11,7 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#pip install folium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,22 +159,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/669134566.py:29: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
-      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2008)\n",
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/669134566.py:49: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
-      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_drugs_dec_2017)\n",
-      "/var/folders/q0/kyk7n6qs3cj9s3l8y_40h1rr0000gn/T/ipykernel_13925/669134566.py:89: UserWarning: color argument of Icon should be one of: {'beige', 'orange', 'darkgreen', 'darkred', 'lightblue', 'black', 'purple', 'red', 'cadetblue', 'blue', 'lightgreen', 'white', 'pink', 'darkblue', 'gray', 'green', 'lightred', 'darkpurple', 'lightgray'}.\n",
-      "  folium.Marker(location=[row['Y'], row['X']], popup=f\"Point {index}\", icon=folium.Icon(color=\"Black\")).add_to(map_sf_prostitution_dec_2017)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "sf_lat = 37.7749\n",
     "sf_long = -122.4194\n",
@@ -264,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
