--- a/McP_Final_sf_ny_corr.ipynb
+++ b/McP_Final_sf_ny_corr.ipynb
@@ -544,6 +544,8 @@
        "      <th>category</th>\n",
        "      <th>incident_code</th>\n",
        "      <th>pd_district</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
        "      <th>dayofweek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -555,6 +557,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16621</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.419658</td>\n",
+       "      <td>37.764221</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -564,6 +568,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16621</td>\n",
        "      <td>TENDERLOIN</td>\n",
+       "      <td>-122.414312</td>\n",
+       "      <td>37.779834</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -573,6 +579,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16621</td>\n",
        "      <td>TENDERLOIN</td>\n",
+       "      <td>-122.415508</td>\n",
+       "      <td>37.781654</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -582,6 +590,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16040</td>\n",
        "      <td>CENTRAL</td>\n",
+       "      <td>-122.407153</td>\n",
+       "      <td>37.798491</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -591,6 +601,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16710</td>\n",
        "      <td>TENDERLOIN</td>\n",
+       "      <td>-122.407845</td>\n",
+       "      <td>37.785094</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -605,12 +617,12 @@
        "3  2008-12-30                      SALE OF MARIJUANA  DRUG/NARCOTIC   \n",
        "4  2008-12-30  POSSESSION OF NARCOTICS PARAPHERNALIA  DRUG/NARCOTIC   \n",
        "\n",
-       "   incident_code pd_district dayofweek  \n",
-       "0          16621     MISSION   Tuesday  \n",
-       "1          16621  TENDERLOIN   Tuesday  \n",
-       "2          16621  TENDERLOIN   Tuesday  \n",
-       "3          16040     CENTRAL   Tuesday  \n",
-       "4          16710  TENDERLOIN   Tuesday  "
+       "   incident_code pd_district           X          Y dayofweek  \n",
+       "0          16621     MISSION -122.419658  37.764221   Tuesday  \n",
+       "1          16621  TENDERLOIN -122.414312  37.779834   Tuesday  \n",
+       "2          16621  TENDERLOIN -122.415508  37.781654   Tuesday  \n",
+       "3          16040     CENTRAL -122.407153  37.798491   Tuesday  \n",
+       "4          16710  TENDERLOIN -122.407845  37.785094   Tuesday  "
       ]
      },
      "metadata": {},
@@ -642,6 +654,8 @@
        "      <th>category</th>\n",
        "      <th>incident_code</th>\n",
        "      <th>pd_district</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
        "      <th>dayofweek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -653,6 +667,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16652</td>\n",
        "      <td>NORTHERN</td>\n",
+       "      <td>-122.420026</td>\n",
+       "      <td>37.783050</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -662,6 +678,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16650</td>\n",
        "      <td>SOUTHERN</td>\n",
+       "      <td>-122.404685</td>\n",
+       "      <td>37.770629</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -671,6 +689,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16060</td>\n",
        "      <td>INGLESIDE</td>\n",
+       "      <td>-122.435991</td>\n",
+       "      <td>37.726719</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -680,6 +700,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16110</td>\n",
        "      <td>NORTHERN</td>\n",
+       "      <td>-122.420026</td>\n",
+       "      <td>37.783050</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -689,6 +711,8 @@
        "      <td>DRUG/NARCOTIC</td>\n",
        "      <td>16623</td>\n",
        "      <td>SOUTHERN</td>\n",
+       "      <td>-122.413564</td>\n",
+       "      <td>37.779514</td>\n",
        "      <td>Sunday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -703,12 +727,12 @@
        "3  2017-12-20            POSSESSION OF HEROIN FOR SALES  DRUG/NARCOTIC   \n",
        "4  2017-12-10  POSSESSION OF BASE/ROCK COCAINE FOR SALE  DRUG/NARCOTIC   \n",
        "\n",
-       "   incident_code pd_district  dayofweek  \n",
-       "0          16652    NORTHERN  Wednesday  \n",
-       "1          16650    SOUTHERN    Tuesday  \n",
-       "2          16060   INGLESIDE  Wednesday  \n",
-       "3          16110    NORTHERN  Wednesday  \n",
-       "4          16623    SOUTHERN     Sunday  "
+       "   incident_code pd_district           X          Y  dayofweek  \n",
+       "0          16652    NORTHERN -122.420026  37.783050  Wednesday  \n",
+       "1          16650    SOUTHERN -122.404685  37.770629    Tuesday  \n",
+       "2          16060   INGLESIDE -122.435991  37.726719  Wednesday  \n",
+       "3          16110    NORTHERN -122.420026  37.783050  Wednesday  \n",
+       "4          16623    SOUTHERN -122.413564  37.779514     Sunday  "
       ]
      },
      "metadata": {},
@@ -740,6 +764,8 @@
        "      <th>category</th>\n",
        "      <th>incident_code</th>\n",
        "      <th>pd_district</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
        "      <th>dayofweek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -751,6 +777,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13070</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.419208</td>\n",
+       "      <td>37.760234</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -760,6 +788,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13060</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.413592</td>\n",
+       "      <td>37.763822</td>\n",
        "      <td>Tuesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -769,6 +799,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13070</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.416873</td>\n",
+       "      <td>37.758764</td>\n",
        "      <td>Saturday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -778,6 +810,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13070</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.416535</td>\n",
+       "      <td>37.766041</td>\n",
        "      <td>Monday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -787,6 +821,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13060</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.416078</td>\n",
+       "      <td>37.762035</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -801,12 +837,12 @@
        "3  2008-12-01  SOLICITS TO VISIT HOUSE OF PROSTITUTION  PROSTITUTION   \n",
        "4  2008-12-10         SOLICITS FOR ACT OF PROSTITUTION  PROSTITUTION   \n",
        "\n",
-       "   incident_code pd_district  dayofweek  \n",
-       "0          13070     MISSION   Thursday  \n",
-       "1          13060     MISSION    Tuesday  \n",
-       "2          13070     MISSION   Saturday  \n",
-       "3          13070     MISSION     Monday  \n",
-       "4          13060     MISSION  Wednesday  "
+       "   incident_code pd_district           X          Y  dayofweek  \n",
+       "0          13070     MISSION -122.419208  37.760234   Thursday  \n",
+       "1          13060     MISSION -122.413592  37.763822    Tuesday  \n",
+       "2          13070     MISSION -122.416873  37.758764   Saturday  \n",
+       "3          13070     MISSION -122.416535  37.766041     Monday  \n",
+       "4          13060     MISSION -122.416078  37.762035  Wednesday  "
       ]
      },
      "metadata": {},
@@ -838,6 +874,8 @@
        "      <th>category</th>\n",
        "      <th>incident_code</th>\n",
        "      <th>pd_district</th>\n",
+       "      <th>X</th>\n",
+       "      <th>Y</th>\n",
        "      <th>dayofweek</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -849,6 +887,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13075</td>\n",
        "      <td>MISSION</td>\n",
+       "      <td>-122.415781</td>\n",
+       "      <td>37.758831</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -858,6 +898,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13060</td>\n",
        "      <td>TARAVAL</td>\n",
+       "      <td>-122.484628</td>\n",
+       "      <td>37.716740</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -867,6 +909,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13045</td>\n",
        "      <td>PARK</td>\n",
+       "      <td>-122.452717</td>\n",
+       "      <td>37.745745</td>\n",
        "      <td>Wednesday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -876,6 +920,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13060</td>\n",
        "      <td>TARAVAL</td>\n",
+       "      <td>-122.484628</td>\n",
+       "      <td>37.716740</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -885,6 +931,8 @@
        "      <td>PROSTITUTION</td>\n",
        "      <td>13075</td>\n",
        "      <td>TARAVAL</td>\n",
+       "      <td>-122.484628</td>\n",
+       "      <td>37.716740</td>\n",
        "      <td>Thursday</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -899,12 +947,12 @@
        "3  2017-12-07       SOLICITS FOR ACT OF PROSTITUTION  PROSTITUTION   \n",
        "4  2017-12-07  LOITERING FOR PURPOSE OF PROSTITUTION  PROSTITUTION   \n",
        "\n",
-       "   incident_code pd_district  dayofweek  \n",
-       "0          13075     MISSION  Wednesday  \n",
-       "1          13060     TARAVAL   Thursday  \n",
-       "2          13045        PARK  Wednesday  \n",
-       "3          13060     TARAVAL   Thursday  \n",
-       "4          13075     TARAVAL   Thursday  "
+       "   incident_code pd_district           X          Y  dayofweek  \n",
+       "0          13075     MISSION -122.415781  37.758831  Wednesday  \n",
+       "1          13060     TARAVAL -122.484628  37.716740   Thursday  \n",
+       "2          13045        PARK -122.452717  37.745745  Wednesday  \n",
+       "3          13060     TARAVAL -122.484628  37.716740   Thursday  \n",
+       "4          13075     TARAVAL -122.484628  37.716740   Thursday  "
       ]
      },
      "metadata": {},
